# todolist_fastapi_django

./: pyproject.toml
django/: README.md
django/todoapp/todoapp/: settings.py  urls.py
django/todoapp/todolist/: views.py
fastapi/: README.md  app.py
